<resources>
    <string name="app_name">PL1</string>
    <string name="click_here">Click here</string>
    <string name="library">Library</string>
    <string name="pocket">Pocket</string>
    <string name="login">LogIn</string>
    <string name="password">Password</string>
    <string name="pocket_library_starts_from_now">Pocket library starts from now……</string>
    <string name="username">Username</string>
    <string name="book_searching">Book searching……</string>
    <string name="please_input">Please input!</string>
    <string name="renew">Renew</string>
    <string name="transfer">Transfer</string>
    <string name="book_id">Book ID:</string>
    <string name="borrow">Borrow:</string>
    <string name="borrowed">Borrowed:</string>
    <string name="borrowing">Borrowing:</string>
    <string name="renew_times">Renew Times:</string>
    <string name="return_">Return:</string>
    <string name="see_you">看见</string>
    <string name="shuidonglewodenailao">谁动了我的奶酪</string>
    <string name="click_me">Click me!</string>
    <string name="details">details</string>
    <string name="available_1">Available: 1</string>
    <string name="book_id_o15_2002_01">Book ID: O15 2002 01</string>
    <string name="collection_2">Collection: 2</string>
    <string name="keyword">Keyword: 线性代数</string>
    <string name="publisher_2002">Publisher: 清华大学出版社 2002</string>
    <string name="bookname_editer">线性代数 第二版 /居余马等编著</string>
    <string name="book_code">Book Code:</string>
    <string name="location">Location:</string>
    <string name="state_available">State: Available</string>
    <string name="state_borrowed">State: Borrowed</string>
    <string name="chat">Chat</string>
    <string name="borrow_date_2016_11_28">Borrow Date : 2016.11.28</string>
    <string name="college_hong_shen">College : Hong Shen</string>
    <string name="name_yang_xiaoxiao">Name : Yang Xiaoxiao</string>
    <string name="renewal_times_2">Renewal Times : 2</string>
    <string name="return_date_2016_12_28">Return Date : 2016.12.28</string>
    <string name="student_id_20154385">Student ID : 20154385</string>
    <string name="about_us">About us</string>
    <string name="message">Message</string>
    <string name="my_account">My Account</string>
    <string name="yang_xiaoxiao">Yang Xiaoxiao</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="zhang_ruiqi">Zhang Ruiqi</string>
    <string name="all_right_reserved">All Right Reserved</string>
    <string name="chongqing_university">Chongqing University</string>
    <string name="copyright_2016_2017_cqu">Copyright 2016-2017 CQU</string>
    <string name="feedback">Feedback</string>
    <string name="new_version">New Version</string>
    <string name="pocket_library">Pocket Library</string>
    <string name="v_1_0_0_000">V 1.0.0.000</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback!</string>
    <string name="submit">submit</string>
    <string name="please_input_your_suggestions_or_troubles">Please input your suggestions or troubles……</string>
    <string name="tel_no_optional">Tel No(Optional)</string>
    <string name="_2_days">2 days</string>
</resources>
