<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.flag.pl1.AboutUs"
    android:orientation="vertical"
    android:background="#ffffcc">

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        app:srcCompat="@drawable/log_in"
        android:id="@+id/imageView15"
        android:scaleType="fitXY"
        android:contentDescription=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/pocket_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp" />

    <TextView
        android:text="@string/v_1_0_0_000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffe6"
        android:layout_marginTop="10sp">

        <TextView
            android:text="@string/new_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold" />

        <ImageView
            app:srcCompat="@android:drawable/checkbox_on_background"
            android:id="@+id/imageView16"
            android:layout_weight="6"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffe6"
        android:layout_marginTop="10sp">

        <TextView
            android:text="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:onClick="feedback" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/imageView18"
            android:layout_weight="6"
            android:tint="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp">

        <TextView
            android:text="@string/chongqing_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <TextView
            android:text="@string/all_right_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <TextView
            android:text="@string/copyright_2016_2017_cqu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
