<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.flag.pl1.Feedback"
    android:orientation="vertical"
    android:background="#ffffcc">

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText4"
        android:background="#ffffe6"
        android:layout_height="200sp"
        android:hint="@string/please_input_your_suggestions_or_troubles"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/tel_no_optional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:background="#ffffe6"
        android:layout_marginTop="40sp" />

    <Button
        android:text="@string/submit"
        android:layout_width="230sp"
        android:layout_height="50sp"
        android:id="@+id/button9"
        android:layout_marginTop="60sp"
        android:layout_gravity="center_horizontal"
        android:onClick="submit" />
</LinearLayout>
