<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="tw.com.flag.pl1.MyBook"
    android:background="#ffffcc"
    android:orientation="vertical"
    android:paddingTop="5sp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/borrowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:text="@string/borrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5sp">

        <ImageView
            app:srcCompat="@drawable/see_you"
            android:id="@+id/imageView8"
            android:scaleType="fitXY"
            android:layout_height="180sp"
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:layout_weight="1">

            <TextView
                android:text="@string/see_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/see_you"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:text="@string/book_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookID1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/renew_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RenewTimes1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/borrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Borrow1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/return_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Return1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/transfer"
            android:layout_height="wrap_content"
            android:id="@+id/tras1"
            android:layout_width="match_parent"
            android:onClick="transfer"
            android:layout_weight="1" />

        <Button
            android:text="Renew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ren1"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_height="180sp"
            app:srcCompat="@drawable/shuidonglewodenailao"
            android:id="@+id/imageView9"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingLeft="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:layout_weight="1">

            <TextView
                android:text="@string/shuidonglewodenailao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shuidonglewodenailao"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:text="@string/book_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BookID2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/renew_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RenewTimes2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/borrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Borrow2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

            <TextView
                android:text="@string/return_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Return2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="10sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/transfer"
            android:layout_height="wrap_content"
            android:id="@+id/trans2"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <Button
            android:text="Renew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ren2"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
