<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book_search_result_datils"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.flag.pl1.BookSearchResultDatils"
    android:background="#ffffcc"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/xianxingdaishu_"
        android:id="@+id/imageView11" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp">

        <TextView
            android:text="@string/book_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookcode1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="5sp" />

        <TextView
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="5sp" />

        <TextView
            android:text="@string/state_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="5sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp">

        <TextView
            android:text="Book Code:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookcode2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="5sp" />

        <TextView
            android:text="Location:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="5sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/state_borrowed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/state2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:paddingTop="5sp"
                android:layout_weight="1" />

            <Button
                android:text="Borrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_weight="3"
                android:onClick="borrower" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
